boulder/tests/compile_fail/function/function_call/func_call_as_arg.bo
# Mismatched types
# found `u16`
# expected `u32`
# (8:
# (13:
# ^^^^^

fn callee(a: u32) -> u32 { a }

fn arg() -> u16 { 7 }

fn caller() -> u32 {
    callee(arg())
}